#VERSION 0.7.98#

*  added class Peak_Spl_FileInfo

*  added new folder for extending spl classes.

*  Peak_Core > added '_path' suffix to core path configurations. fixed getPath() to add this suffix and by way ensured
               that no change is needed outside and separate path configs from other core configs.
 
*  Peak_Core > added static method config(). get/set core configs            

*  Peak_View_Theme > added method folder(). It set the theme folder name to use. 
                     Tweaked Peak_View::theme() to use this new functionnality

*  Peak_Registry > deprecated method obj() in favor of method shorcut o()

*  Peak_Application_Modules > simplified method run(). It now call Peak_Application run method instead of 
                              trying to emulate his job

*  Peak_Router > added method reset(). Ensure that the router vars are clean before using getResquestUri()

*  Peak_Core > lighten the file by moving/deling methods getModules(), getModule(), getCachedModules()
               and property $_modules


#VERSION 0.7.97#

*  Peak_Core > method initModule() moved to a new extension file(Peak_Core_Extension_Modules) and renamed init()

*  added Peak_Core_Extensions derived from Peak_Helpers, ext() method simplified in Peak_Core 
   and moved extensions in Peak/Core/Extension

*  Peak_Core > Peak_Configs is stored in Peak_Registry under the name of 'core_config'

*  added Peak_Application_Modules > allow to create/use complet modules application inside application
                                    
*  Peak_Core > added methods init(), initApp() and initModules(). Removed methods setPath() and getPaths().
               modified getPath() to point to new Peak_Config object.
               A lot of files was affected by this change because we replace a lot of php constants by
               Peak_Core::getPath() static method (boot, autoload, Controller, Controller Helpers, 